--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container">
-        <button>GIOCA</button>
+        <button class="inizia">GIOCA</button>
         
         <div id="gameGrid" class="griglia">
             
